# Plix

./: .gitignore  Cargo.toml
shaders/: circles.wgsl  idk.wgsl  raymarching_test.wgsl
src/: app.rs  compute.rs  compute.wgsl  export.rs  main.rs  render.wgsl  renderer.rs  shader_manager.rs  texture.rs
