[package]
name = "plix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
eframe = { version = "0.27.2", features = ["wayland", "wgpu"] }
notify = "6.1.1"
pollster = "0.3.0"
